# ChangeLog for net-firewall/nufw
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/nufw/ChangeLog,v 1.40 2013/06/01 12:19:18 pacho Exp $

  01 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due bug #151880

  08 Feb 2013; Alon Bar-Lev <alonbl@gentoo.org> nufw-2.2.22.ebuild:
  Fixup usage of ssl-cert, bug#450048

  17 Jun 2010; Patrick Lauer <patrick@gentoo.org> nufw-2.2.21.ebuild,
  nufw-2.2.22.ebuild:
  Migrating away from deprecated postgres virtuals

*nufw-2.2.22 (18 Mar 2010)

  18 Mar 2010; Cédric Krier <cedk@gentoo.org> +nufw-2.2.22.ebuild:
  Version bump and fix include dir for bug #308957

  18 Mar 2010; Cédric Krier <cedk@gentoo.org>
  -files/nufw-2.2.6-auth_mysql.patch, -nufw-2.2.8.ebuild:
  Remove old

  14 Sep 2009; Christian Faulhammer <fauli@gentoo.org> nufw-2.2.21.ebuild:
  stable x86, bug 281222

  02 Aug 2009; Cédric Krier <cedk@gentoo.org> -nufw-2.2.20.ebuild:
  Remove old

*nufw-2.2.21 (02 Aug 2009)

  02 Aug 2009; Cédric Krier <cedk@gentoo.org> +nufw-2.2.21.ebuild,
  +files/nufw-2.2.21-fix-gnutls.patch:
  Version bump and add fix for gnutls >= 2.7.1 for bug #279581

*nufw-2.2.20 (17 Jan 2009)

  17 Jan 2009; Cédric Krier <cedk@gentoo.org>
  -files/nufw-2.2.13-destdir.patch, metadata.xml, -nufw-2.2.13.ebuild,
  -nufw-2.2.14.ebuild, +nufw-2.2.20.ebuild:
  Version bump

  17 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  21 May 2008; Tiziano Müller <dev-zero@gentoo.org> nufw-2.2.8.ebuild,
  nufw-2.2.13.ebuild, nufw-2.2.14.ebuild:
  Changed dependency for postgresql from dev-db/postgresql to
  virtual/postgresql-server

*nufw-2.2.14 (05 Apr 2008)

  05 Apr 2008; Cédric Krier <cedk@gentoo.org> +nufw-2.2.14.ebuild:
  Version bump

*nufw-2.2.13 (28 Mar 2008)

  28 Mar 2008; Cédric Krier <cedk@gentoo.org>
  -files/nufw-2.2.10-destdir.patch, +files/nufw-2.2.13-destdir.patch,