@@ -8,14 +8,26 @@ AUX nufw-conf.d 81 SHA256 c616bb91451f7bf34cfe3139a972be01a562ece6c372d2ee39c3cd
 AUX nufw-init.d 276 SHA256 972c3c94a7e290985cc7e8a0ccc40dfa0e10d7eee44e218c70f6fc7f8ed73f9d SHA512 473baef05978888c69f3dd22bf2b495039804e947bc387cbfd924713839d393c3eaf1cd0ad7dad27e5cb72b94fc678fc4628663288c8b1ccbd7fce3391c9a3cc WHIRLPOOL 713eee35460abe8eba97242a3f0f1e61dbd3a123fe42e68cc3c24bd8f448e2382620fabeec509117d7bc36222b0a9254748bbe0d7d0104739cced095e694b112
 DIST nufw-2.2.21.tar.bz2 593079 SHA256 7dab7b2e06cc9f72d365680c206ec2e58a4984eec0427f854c686a990656a669
 DIST nufw-2.2.22.tar.bz2 597491 SHA256 92603813b4138bfd52b5873c68d7c6e43f78885a414067e57bd2c1e8eba66b8c SHA512 cc9f43b9ebf6aabbab4c83799ca1735fc456c085959cfb24d17571302c71518660424195b2cc62ed615f811bd6b3c45e1b99db99138d1caa6a744370775acaee WHIRLPOOL 5e493d2aa2c661dd9766670bb805f98849c82f1962d39ff3692481f7049740cc73455e6aa45b7ca20632b2e254be8bb953f9aebdeb7a46c525578fc7a9d007ba
-EBUILD nufw-2.2.21.ebuild 3008 SHA256 bd48618d00adb07bc2c33d1889f59ad506d0e6a874ae4c049d9a6fccd414320e SHA512 26e844c90c32f51939800fa63741c3f05bcd3bdaf0cbe2560e965d6d1cecf6012fd943eac1c9bc909fdbb926c5f594228c8df33960b70ef26b9ece62cc0f899b WHIRLPOOL 39967272ef491eb25cf0f23d0169a4754eca919379a8ee3609cbb34b8591b357cc1adf557eee915af7f5ee30804ddd781691be22f3c140ce40d814fc106aebe0
-EBUILD nufw-2.2.22.ebuild 2720 SHA256 83af149547d756ae01033b736b9a2c534d6aef47f8969e6bb92631941c9cc9e5 SHA512 4b49026f5879f25e9be72d2a0221079e2aa41c33aabe0b008ebadd8172bf6de84040de7f087c75378328f2ede1b4a550b4b74f05026dea52a57c69289d6356bc WHIRLPOOL a3a01c5bce399c8f1bc422f68c2da6023a03def64ad1319b139294bfd4f50c25bac5e98ff8462a0a92cddbef07d616516d571603acb852d9ad64a833c33cf60c
-MISC ChangeLog 5492 SHA256 a5af60661faa0780be6dde44adc23408019fca421b2848b57a3170ca658a6455 SHA512 f1e6726a2d8b882d76b6d5b8f448bc330b1500578e9b95d81873d060e1096962ff1e6a48493eab3a62f1fd9c8b00bc7faf708af58030f459b5872edd36b68d6c WHIRLPOOL 437929b617d6c0499214b67388bac65c26e823e4af782cd1fc540f412b2250e60431ae15f6ca4346dadc0135482d6871a8434f984fcefd816a74bffd1a249e26
+EBUILD nufw-2.2.21.ebuild 3017 SHA256 01e1fe254225bb094ce377631abdfbc498d78db16069600a0db0b25026d09614 SHA512 226e40a7e514dd05d145a830cb6db64c19c43cce854d19ebd0927ed1704896e77b5403b17cfef9c061d6fe9d7d45fd3a94d8abe0cf4be20080d2fc592f931d15 WHIRLPOOL 2c1349b212fac7697cdd31adea805a5a3e82249f7a0bb926eec22b0bff95c56d5b54a3d852d8ac06494fded5fa0fb568eee3ebdc686985787209006469fc0ca1
+EBUILD nufw-2.2.22.ebuild 2729 SHA256 3b9630448316014050ac7b7e39d7045c7c5f9638604998b3fab7429a85c98405 SHA512 c279a87039bdede6a11821ee1d82b6e0c3604de681349146be1272cb0a011a6bb674b02ded551915405853a28aad21110a0c8f7a6dbda7eaaa534b70c9a55378 WHIRLPOOL 084a92d38936593cceca99fd4cabf84c1683a9eca0c587dffc8140995ed3e8a84f3db05c0c130ca26c4740c22908ed723d21e04438189eeba9e367b5126db0eb
+MISC ChangeLog 5625 SHA256 7f5a82da74decfcb63ee79d74bfdfbf6c60bc0f6176e15c594abb94d6828cb73 SHA512 9f8a3ce99c1d7be044633a907388069c782ad9eac8137a250e5bf80219310927c87ce80d933d41bebc49b209275d66b123cb106058e090a5cd71cb6f2f8d19bc WHIRLPOOL 4e405cbe1d714ae1a90636ae2e96972529e341b1fcb5d17043efd4aa5009fe9ba7dc9d1e488b929ef5adf76ce33f7520c16ded795966d72ef1e36a2bfbcf816f
 MISC metadata.xml 536 SHA256 15dc9b7b706214042818b8f2aabdb6a438e6d3a04bd9a51aadda2fa7c9f65694 SHA512 7391b2cca1d2d3412f6990edf5b54153bcecf7f4c1912ebfcd7942d4a0528e8b566565b3c6f807991452b272eac0dfae010dbaae86e3e6f8df45dc0f0b5eaf17 WHIRLPOOL eaa7f8c23231bd930e5c278e492121f3f10177e27a52be5e141dd1056dcbeb8fad0e099ba65597303df6fecbb8f00a379242ef519a7fc1d3ba1bb57583275673
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlGp5scACgkQCaWpQKGI+9RxGgCbBJ08CKV4uOL7m9/fThYmXPc4
-G3gAmwT1qdhhcodm+7qkDAahDTdz7iiA
-=UU1b
+iQJ8BAEBCABmBQJTEmPvXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOBCkP/j1iq4qXjvxOEyNZA+VqocDS
+wP0KCgdXaMy3Juho+mbfyNxZv0nOz19KNFqirF98HF7lxZ7M8gfqI0jCgvWtA3ns
+Hh6RMW2a6L9T+si/x7WRMpZNXPZA2NifEEkFazPUl3H+juroP2kgLR1t3L7+zi60
+sGWbhotlus/6ULW+iCJZ8io23AIVpojrDqp4b3WhHg1eLbiXwfrZUugF008wLHYs
+JmiYx4M07MtyU6dzEjRV6j/juBomBn53SvLj959Iv/ZXuZRBLqg1b9f9JRmFlLTY
+HTGI/e8HzPhPlbOQxMyUuWIsH8lthtUOcJpV8JQ6af+gcHvZAfOmT3hiEXyoYAfw
+oLLAf7Qro1ajlDemAPusK2d/Vtpyw3maW+7vDEPQQjB1j/2dlRuxJAvb9X3N/M5G
+YVFSpLS1eB1Hajxocpgmdyqy6S5n88nlRFJj0HcUJrNXhuwwUEc2fAocFv0+PbWo
+Qw5BN9u7uHimotKPQ8m5fVqR4bInTVfVnEKJ6d/RhHBNGsdVpbkHi2pcnbe8Encp
+wGQb3sUv5EsU/f5ZzxM/uVIiHPMJ4v/lq09uC20pT8uSTka7EpH4XbKxSWltKZBR
+eKVNPl+v0MBwLJIbZ/3XzDG3LRbwYQcMIylbkIxKzTS43HibPOF0gAofI3TEvFkz
+kEr7D9VEKCAS5PTdJ9BQ
+=B+Wp
 -----END PGP SIGNATURE-----
