@@ -1,6 +1,10 @@
 # ChangeLog for net-firewall/nufw
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/nufw/ChangeLog,v 1.40 2013/06/01 12:19:18 pacho Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/nufw/ChangeLog,v 1.41 2014/03/01 22:49:17 mgorny Exp $
+
+  01 Mar 2014; Michał Górny <mgorny@gentoo.org> nufw-2.2.21.ebuild,
+  nufw-2.2.22.ebuild:
+  Update libgcrypt dep to use slot :0.
 
   01 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Cleanup due bug #151880
